添加了注释

--- a/Rstudio中使用git.qmd
+++ b/Rstudio中使用git.qmd
@@ -13,3 +13,5 @@ system("G:/Program/git/Git/cmd/git.exe config --global user.name 'Yaoswrold'")
 >>> G:/Program/git/Git/cmd/git.exe commit -F C:/Users/10981/AppData/Local/Temp/Rtmpone126/git-commit-message-3fbc2b095faa.txt
 Aborting commit due to empty commit message.
 ```
+
+你扫低分局
